[package]
name = "wavebranch"
version = "0.1.0"
edition = "2021"
description = "A version control system for uncompressed audio files (.wav)"

[[bin]]
name = "wave"
path = "src/main.rs"

[dependencies]
clap      = { version = "4", features = ["derive"] }
hound     = "3"
sha2      = "0.10"
hex       = "0.4"
bytemuck  = { version = "1", features = ["derive"] }
thiserror = "1"
flate2    = { version = "1", features = ["zlib"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "=0.4.31"

[dev-dependencies]
tempfile = "3"
